--- a/index.html
+++ b/index.html
@@ -107,45 +107,48 @@
 <div id = "teamSect" class = "subSection"> 
 	<h1 class = "text-center">TEAM</h1>
 		<div class="row">
-			<div class="col-lg-4 col-md-6 col-sm-12 col" style = "text-align: center">
+			<div class="col-lg-4 col-md-6 col-sm-12 col">
 				<h4 class = "text-center"> President </h4>
 				<img src="http://placehold.it/200x200">
-				<p class = "text-left" style = "max-width: 100%" style = "text-align: center"> This is the LEFT column 
+				<p class = "text-left"> This is the LEFT column 
 				I'm a person who does this thing, this thing, and this thing very passionately. I've been passionate about these things since I was a little kid, and I'm so extremely happy to say I've held onto my childhood dreams. I have experience in these things starting from this time I did that thing that was relevant to my field. I've done things for this company including these things, those things, this thing, and that other thing. I also like kittens and playing cello alone in my attic in granny panties.
 				</p>
 			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12 col" style = "text-align: center">
+			<div class="col-lg-4 col-md-6 col-sm-12 col">
 				<h4 class = "text-center"> Vice President </h4>
 				<img src="http://placehold.it/200x200">
-				<p class = "text-left" style = "max-width: 100%" style = "text-align: center"> This is the CENTERcolumn
+				<p class = "text-left"> This is the CENTERcolumn
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
 				</p>
 			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12 col" style = "text-align: center">
+			<div class="col-lg-4 col-md-6 col-sm-12 col">
 				<h4 class = "text-center"> Secretary </h4>
 				<img src="http://placehold.it/200x200">
-				<p class = "text-left" style = "max-width: 100%" style = "text-align: center"> This is the RIGHT column 
+				<p class = "text-left"> This is the RIGHT column 
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
 				</p>
 			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12 col" style = "text-align: center">
+			<div class="col-lg-4 col-md-6 col-sm-12 col">
 				<h4 class = "text-center"> Top Bitch </h4>
 				<img src="http://placehold.it/200x200">
-				<p class = "text-left" style = "max-width: 100%" style = "text-align: center"> This is the LEFT column 
+				<p class = "text-left"> This is the LEFT column 
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
 				</p>
 			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12 col" style = "text-align: center">
+			<div class="col-lg-4 col-md-6 col-sm-12 col">
 				<h4 class = "text-center"> Bottom Bitch </h4>
 				<img src="http://placehold.it/200x200">
-				<p class = "text-left" style = "max-width: 100%" style = "text-align: center"> This is the CENTER column 
+				<p class = "text-left"> This is the CENTER column 
 				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
 				</p>
 			</div>
-			<div class="col-lg-4 col-md-6 col-sm-12 col" style = "text-align: center">
-				<h4 class = "text-center"> Meet the Rest of the Team </h4>
-				<img src="http://placehold.it/200x200">
-				<p class = "text-left" style = "max-width: 100%" style = "text-align: center"> 
+			<div class="col-lg-4 col-md-6 col-sm-12 col">
+				<p class = "text-left">
+					<br>
+					<button type="button" class ="TeamButton" href = "./index.html" target = "_blank"> 
+						Meet the Rest of Our Team      <i class="fa fa-long-arrow-right"></i>
+					</button>
+					
 				</p>
 			</div>
 
@@ -182,7 +185,7 @@
 	</p>
 
 	<div class="col-lg-12 text-center">
-		<button type="button" class="btn btn-success btn-lg"><a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank">Apply</a></button>
+		<button id = "ApplyButton" type="button" class="btn btn-success btn-lg" href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank">Apply</button>
 	</div>
 </div>
 		<div id = "contactSect" style = "background: rgb(142, 22, 22)">
