--- a/index.html
+++ b/index.html
@@ -143,10 +143,9 @@
 				</p>
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12 col">
-				<p class = "text-left">
-					<br>
+				<br class = "br-left">
 					<button type="button" class ="TeamButton" href = "./index.html" target = "_blank"> 
-						Meet the Rest of Our Team      <i class="fa fa-long-arrow-right"></i>
+						Meet the Rest of Our Team <i class="fa fa-long-arrow-right"></i>
 					</button>
 					
 				</p>
@@ -184,11 +183,11 @@
 	<br>
 	</p>
 
-	<div class="col-lg-12 text-center">
-		<button id = "ApplyButton" type="button" class="btn btn-success btn-lg" href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank">Apply</button>
+	<div class="col-lg-12 col-md-4 text-center">
+		<a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank"><button id = "ApplyButton" type="button" class="btn-square btn-success">Apply</button></a>
 	</div>
 </div>
-		<div id = "contactSect" style = "background: rgb(142, 22, 22)">
+		<div id = "contactSect">
 			<h1 class = "text-center">CONTACT</h1>
 			<div class="row">
 				<div class="contactInfo col-md-9 col-xs-12">
@@ -197,13 +196,13 @@
 							<label for="exampleInputEmail">List Serve</label>
 							<input type="email" class="form-control emailBox" id="exampleInputEmail" placeholder="@cornell.edu">
 						</div>
-						<button type="submit" class="btn btn-primary">Subscribe</button>
+						<button type="submit" class="btn-square-sm btn-primary">Subscribe</button>
 					</form>
 				</div>
-				<div class="contactInfo col-md-3 col-xs-12">
+				<div class="contactInfo col-md-2 col-xs-12">
 					<a class="btn btn-lg btn-social-icon btn-facebook" href="https://www.facebook.com/cornellconsultingclub/" target = "_blank">
 						<span class="fa fa-facebook"></span>
-					</a> Facebook <br>
+					</a>Facebook <br>
 					<a class="btn btn-lg btn-social-icon btn-linkedin" href="https://www.linkedin.com/company/2709447?trk=prof-0-ovw-curr_pos" target = "_blank">
 						<span class="fa fa-linkedin"></span>
 					</a> Linkedin <br>
