--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head lang = "en">
+<head lang = "en">
 		<!-- Set Viewport to size of device -->
 		<meta name = "viewport" content = "width=device-width">
 		<meta charset="UTF-8">
@@ -21,22 +21,35 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-	</head>
-	<body>
-		<header>
-			<nav>
-				<ul class = "menuList">
-					<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
-					<li><a id = "news" class = "btn" href = "#newsSect">NEWS</a></li>
-					<li><a id = "team" class = "btn" href = "#teamSect">TEAM</a></li>
-					<!-- Change  -->
-					<!-- <li><a id = "extra" class = "btn" href = "#extraSect">EXTRA</a></li> -->
-					<li><a id = "apply" class = "btn" href = "#applySect">APPLY</a></li>
-					<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
-				</ul>
+</head>
+<body>
+	<header>
+		<nav>
+			<ul class = "menuList">
+				<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
+				<li><a id = "news" class = "btn" href = "#newsSect">NEWS</a></li>
+				<li><a id = "team" class = "btn" href = "#teamSect">TEAM</a></li>
+				<li><a id = "apply" class = "btn" href = "#applySect">APPLY</a></li>
+				<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
+			</ul>
 		</nav>
-</header>
+	</header>
 
+<!-- <div class="hamburgler-menu">
+  <ul class="hamburgler-menu-list">
+    <li>Home</li>
+    <li>About</li>
+    <li>Portfolio</li>
+    <li>Blog</li>
+    <li>Contact</li>
+  </ul>
+</div>
+
+<div id="hamburgler" class="hamburgler-icon-wrapper">
+  <span class="hamburgler-icon"></span>
+</div> -->
+
+<!-- Home Page -->
 <div id = "homeSect" class = "sect sectA"> 
 	<img src="images/Logo3.png" class="CCCLogo" alt="CCC Logo" align="midde"/>
 	<h1 id="CCCmast">Cornell Consulting Club</h1>
@@ -45,6 +58,7 @@
 	</p>
 </div>
 
+<!-- About Section -->
 <div id = "aboutSect" class = "subSection"> 
 	<h1 class = "text-center">Who are we?</h1>
 	<p>CCC is the leading and oldest undergraduate consulting organization at Cornell. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
@@ -93,7 +107,7 @@
           </div>
       </div>
 
-    <!--Controls-->
+    <!--Controls for Carousel-->
     <a class = "left carousel-control" href = "#newsSect" data-slide="prev">
       <span class = "glyphicon glyphicon-chevron-left"></span>
     </a>
@@ -101,9 +115,8 @@
       <span class = "glyphicon glyphicon-chevron-right"></span>
     </a>
   </div>
-	<!--<h1>NEWS</h1>
-	<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>-->
 
+<!-- Executive Board -->
 <div id = "teamSect" class = "subSection"> 
 	<h1 class = "text-center">TEAM</h1>
 		<div class="row">
@@ -156,7 +169,7 @@
 	</div>
 </div>
 
-<!-- Change -->
+<!-- Application Page -->
 <div id = "applySect" class = "sect sectC"> 
 	<h1 class = "text-center">APPLY</h1>
 	<p>
@@ -187,36 +200,38 @@
 		<a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank"><button id = "ApplyButton" type="button" class="btn-square btn-success">Apply</button></a>
 	</div>
 </div>
-		<div id = "contactSect">
-			<h1 class = "text-center">CONTACT</h1>
-			<div class="row">
-				<div class="contactInfo col-md-9 col-xs-12">
-					<form class="listServe-form">
-						<div class="form-group">
-							<label for="exampleInputEmail">List Serve</label>
-							<input type="email" class="form-control emailBox" id="exampleInputEmail" placeholder="@cornell.edu">
-						</div>
-						<button type="submit" class="btn-square-sm btn-primary">Subscribe</button>
-					</form>
-				</div>
-				<div class="contactInfo col-md-2 col-xs-12">
-					<a class="btn btn-lg btn-social-icon btn-facebook" href="https://www.facebook.com/cornellconsultingclub/" target = "_blank">
-						<span class="fa fa-facebook"></span>
-					</a>Facebook <br>
-					<a class="btn btn-lg btn-social-icon btn-linkedin" href="https://www.linkedin.com/company/2709447?trk=prof-0-ovw-curr_pos" target = "_blank">
-						<span class="fa fa-linkedin"></span>
-					</a> Linkedin <br>
-					<input id="contactEmail" type="hidden" name="email" value="consultingclub@cornell.edu">
-					<a class="btn btn-lg btn-social-icon btn-envelope"  target = "_blank">
-						<span class="fa fa-envelope" onclick="copyToClipboard('contactEmail')"></span>
-					</a> Email
-					<div>
+
+<!-- Contact -->
+<div id = "contactSect">
+	<h1 class = "text-center">CONTACT</h1>
+		<div class="row">
+			<div class="contactInfo col-md-9 col-xs-12">
+				<form class="listServe-form">
+					<div class="form-group">
+						<label for="exampleInputEmail">List Serve</label>
+						<input type="email" class="form-control emailBox" id="exampleInputEmail" placeholder="@cornell.edu">
 					</div>
-				</div>
+					<button type="submit" class="btn-square-sm btn-primary">Subscribe</button>
+				</form>
+			</div>
+			<div class="contactInfo col-md-2 col-xs-12">
+				<a class="btn btn-lg btn-social-icon btn-facebook" href="https://www.facebook.com/cornellconsultingclub/" target = "_blank">
+					<span class="fa fa-facebook"></span>
+				</a>Facebook <br>
+				<a class="btn btn-lg btn-social-icon btn-linkedin" href="https://www.linkedin.com/company/2709447?trk=prof-0-ovw-curr_pos" target = "_blank">
+					<span class="fa fa-linkedin"></span>
+				</a> Linkedin <br>
+				<input id="contactEmail" type="hidden" name="email" value="consultingclub@cornell.edu">
+				<a class="btn btn-lg btn-social-icon btn-envelope"  target = "_blank">
+					<span class="fa fa-envelope" onclick="copyToClipboard('contactEmail')"></span>
+				</a> Email
+				<div>
 			</div>
 		</div>
-		<script src = "js/jquery-3.1.0.min.js" type = "text/javascript"></script>
-		<script src = "js/scripts.js" type = "text/javascript"></script>
-		<script src="js/bootstrap.min.js"></script>
-	</body>
+	</div>
+</div>
+	<script src = "js/jquery-3.1.0.min.js" type = "text/javascript"></script>
+	<script src = "js/scripts.js" type = "text/javascript"></script>
+	<script src="js/bootstrap.min.js"></script>
+</body>
 </html>
