--- a/index.html
+++ b/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
 <html>
-<head lang = "en">
-		<!-- Set Viewport to size of device -->
-		<meta name = "viewport" content = "width=device-width">
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		
-		<title>Scrolling</title>
-		<!-- Bootstrap -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href = "css/style.css">
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Khula">
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-		<link href="css/bootstrap-social.css" rel="stylesheet">
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-</head>
-<body>
-	<header>
-		<nav>
-			<ul class = "menuList">
-				<li><a id = "about" class = "btn" href = "#aboutSect">ABOUT</a></li>
-				<li><a id = "news" class = "btn" href = "#newsSect">NEWS</a></li>
-				<li><a id = "team" class = "btn" href = "#teamSect">TEAM</a></li>
-				<li><a id = "apply" class = "btn" href = "#applySect">APPLY</a></li>
-				<li><a id = "contact" class = "btn" href = "#contactSect">CONTACT</a></li>
-			</ul>
-		</nav>
-	</header>
+    <head lang = "en">
+        <!-- Set Viewport to size of device -->
+        <meta name = "viewport" content = "width=device-width">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        
+        <title>Scrolling</title>
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href = "css/style.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Khula">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link href="css/bootstrap-social.css" rel="stylesheet">
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <header>
+            <nav class="navbar navbar-inverse">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span> 
+                        </button>
+                    </div>
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <div class = "table">
+                           <ul class="nav navbar-nav">
+                               <!-- <li class="active"><a href="#">Home</a></li> -->
+                               <li><a id = "about" class = "headerButton" href="#aboutSect">ABOUT</a></li>
+                               <li><a id = "news" class = "headerButton" href="#newsSect">NEWS</a></li> 
+                               <li><a id = "team" class = "headerButton" href="#teamSect">TEAM</a></li> 
+                               <li><a id = "apply" class = "headerButton" href="#applySect">APPLY</a></li> 
+                               <li><a id = "contact" class = "headerButton" href="#contactSect">CONTACT</a></li> 
+                           </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </header>
 
-<!-- <div class="hamburgler-menu">
-  <ul class="hamburgler-menu-list">
-    <li>Home</li>
-    <li>About</li>
-    <li>Portfolio</li>
-    <li>Blog</li>
-    <li>Contact</li>
-  </ul>
-</div>
-
-<div id="hamburgler" class="hamburgler-icon-wrapper">
-  <span class="hamburgler-icon"></span>
-</div> -->
 
 <!-- Home Page -->
 <div id = "homeSect" class = "sect sectA"> 
-	<img src="images/Logo3.png" class="CCCLogo" alt="CCC Logo" align="midde"/>
-	<h1 id="CCCmast">Cornell Consulting Club</h1>
-	<p id="CallToAction">
-		Education &#8251 Hands-on experience &#8251 Networking
-	</p>
+    <img src="images/Logo3.png" class="CCCLogo" alt="CCC Logo" align="midde"/>
+    <h1 id="CCCmast">Cornell Consulting Club</h1>
+    <p id="CallToAction">
+        Education &#8251 Hands-on experience &#8251 Networking
+    </p>
 </div>
 
 <!-- About Section -->
 <div id = "aboutSect" class = "subSection"> 
-	<h1 class = "text-center">Who are we?</h1>
-	<p>CCC is the leading and oldest undergraduate consulting organization at Cornell. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
+    <h1 class = "text-center">Who are we?</h1>
+    <p>CCC is the leading and oldest undergraduate consulting organization at Cornell. For our clients we offer consulting services, solving business problems in functional areas such as strategy, management, business development, operations, marketing, finance and technology. For our members, we offer a truly unique hands-on experience where our consultants get to work in teams and solve challenging business problems for clients in industries including high-tech, financial services, venture capital, oil & gas, investment banking, non-profit, education, restaurant, government and much more. Our past engagements have included big clients such as a top-10 venture capital firm, a top-10 business school, and an international European asset manager, as well as smaller clients such as several local startups and a regional museum.</p>
 </div>
 
 
-	<!--Carousel-->
+    <!--Carousel-->
     <div id = "newsSect" class="carousel slide sect" data-ride = "carousel"> 
 
       <ol class = "carousel-indicators">
@@ -79,31 +80,31 @@
           <div class = "item active">
               <a href= "#"><img src = "http://cornellconsultingclub.com/ccc/images/Cornerstone%20Case%20Competition.png"></a>
                 <div class = "container-fluid">
-	                <div class = "carousel-caption">
-	                    <h1>Cornerstone Research 2015 Case Competition</h1>
-	                    <p>Join us and the team from Cornerstone Research for a case competition, information session and networking session, with free food and drinks!</p>
-	                </div>
-	              </div>
+                    <div class = "carousel-caption">
+                        <h1>Cornerstone Research 2015 Case Competition</h1>
+                        <p>Join us and the team from Cornerstone Research for a case competition, information session and networking session, with free food and drinks!</p>
+                    </div>
+                  </div>
           </div>
 
           <div class = "item">
               <a href= "#"><img src = "http://cornellconsultingclub.com/ccc/images/projects.jpg"></a>
                 <div class = "container-fluid">
-	                <div class = "carousel-caption">
-	                    <h1>Service Offerings</h1>
-	                    <p>Our services have traditionally concentrated in sales and marketing strategy, organizational strategy and business unit strategy to companies in different industries including private equity, energy and gas, high technology and financial services.</p>
-	                </div>
-	              </div>
+                    <div class = "carousel-caption">
+                        <h1>Service Offerings</h1>
+                        <p>Our services have traditionally concentrated in sales and marketing strategy, organizational strategy and business unit strategy to companies in different industries including private equity, energy and gas, high technology and financial services.</p>
+                    </div>
+                  </div>
           </div>
 
           <div class = "item">
               <a href= "#"><img src = "http://cornellconsultingclub.com/ccc/images/bcg.jpg"></a>
                 <div class = "container-fluid">
-	                <div class = "carousel-caption">
-	                    <h1>Office Visits</h1>
-	                    <p>CCC visits top consulting firms in NYC at the beginning of every semester, right before internship opportunities or full-time recruiting.</p>
-	                </div>
-	              </div>
+                    <div class = "carousel-caption">
+                        <h1>Office Visits</h1>
+                        <p>CCC visits top consulting firms in NYC at the beginning of every semester, right before internship opportunities or full-time recruiting.</p>
+                    </div>
+                  </div>
           </div>
       </div>
 
@@ -116,8 +117,13 @@
     </a>
   </div>
 
+    <!--<h1>NEWS</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.</p>-->
+
+
 <!-- Executive Board -->
 <div id = "teamSect" class = "subSection"> 
+
 	<h1 class = "text-center">TEAM</h1>
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-sm-12 col">
@@ -164,37 +170,39 @@
 				</p>
 			</div>
 
-			</div>
-		</div>
-	</div>
+
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Application Page -->
 <div id = "applySect" class = "sect sectC"> 
-	<h1 class = "text-center">APPLY</h1>
-	<p>
+    <h1 class = "text-center">APPLY</h1>
+    <p>
 
-	<span>Gain Consulting Experience</span>
-	<br> 	
-	The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience. In today’s job market, the primary factors for success – besides an excellent education – are experience, personal networks and ability, all of which are refined and improved at CCC. Hands-on consulting workshops combined with (alumni/employer) networking sessions provide an ideal combination for the advancement of a member’s professional career, while the microcosm of excelling and working with like-minded students provides a nurturing and personal connection with consulting itself.<br>
-	<br>
-	<hr align="center">
-	</p>
+    <span>Gain Consulting Experience</span>
+    <br>    
+    The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience. In today’s job market, the primary factors for success – besides an excellent education – are experience, personal networks and ability, all of which are refined and improved at CCC. Hands-on consulting workshops combined with (alumni/employer) networking sessions provide an ideal combination for the advancement of a member’s professional career, while the microcosm of excelling and working with like-minded students provides a nurturing and personal connection with consulting itself.<br>
+    <br>
+    <hr align="center">
+    </p>
 
-	<p>
-	<span>Expand Your Network</span>
-	<br>
-	The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
-	<br>
-	<hr>
-	</p>
+    <p>
+    <span>Expand Your Network</span>
+    <br>
+    The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
+    <br>
+    <hr>
+    </p>
 
-	<p>
-	<span>Educational Program</span>
-	<br>
-	The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
-	<br>
-	</p>
+    <p>
+    <span>Educational Program</span>
+    <br>
+    The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
+    <br>
+    </p>
+
 
 	<div class="col-lg-12 col-md-4 text-center">
 		<a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank"><button id = "ApplyButton" type="button" class="btn-square btn-success">Apply</button></a>
@@ -234,4 +242,5 @@
 	<script src = "js/scripts.js" type = "text/javascript"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
