Fixed carousel height?

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <!--Wrapper for Slides-->
       <div class = "carousel-inner">
           <div class = "item active">
-              <a href= "#"><img src = "http://cornellconsultingclub.com/ccc/images/Cornerstone%20Case%20Competition.png"></a>
+              <a href= "#"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/Cornerstone%20Case%20Competition.png"></a>
                 <div class = "container-fluid">
                     <div class = "carousel-caption">
                         <h1>Cornerstone Research 2015 Case Competition</h1>
@@ -88,7 +88,7 @@
           </div>
 
           <div class = "item">
-              <a href= "#"><img src = "http://cornellconsultingclub.com/ccc/images/projects.jpg"></a>
+              <a href= "#"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/projects.jpg"></a>
                 <div class = "container-fluid">
                     <div class = "carousel-caption">
                         <h1>Service Offerings</h1>
@@ -98,7 +98,7 @@
           </div>
 
           <div class = "item">
-              <a href= "#"><img src = "http://cornellconsultingclub.com/ccc/images/bcg.jpg"></a>
+              <a href= "#"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/bcg.jpg"></a>
                 <div class = "container-fluid">
                     <div class = "carousel-caption">
                         <h1>Office Visits</h1>
