Squared Social buttons

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     </p>
 
 
-	<div class="col-lg-12 col-md-4 text-center">
+	<div class="col-lg-12 col-md-12 text-center">
 		<a href = "https://ccc13.typeform.com/to/R2WVk2" target = "_blank"><button id = "ApplyButton" type="button" class="btn-square btn-success">Apply</button></a>
 	</div>
 </div>
@@ -217,7 +217,7 @@
 				<form class="listServe-form">
 					<div class="form-group">
 						<label for="exampleInputEmail">List Serve</label>
-						<input type="email" class="form-control emailBox" id="exampleInputEmail" placeholder="@cornell.edu">
+						<input type="email" class="form-control emailBox" id="exampleInputEmail" placeholder="Enter your NetID">
 					</div>
 					<button type="submit" class="btn-square-sm btn-primary">Subscribe</button>
 				</form>
@@ -225,10 +225,10 @@
 			<div class="contactInfo col-md-2 col-xs-12">
 				<a class="btn btn-lg btn-social-icon btn-facebook" href="https://www.facebook.com/cornellconsultingclub/" target = "_blank">
 					<span class="fa fa-facebook"></span>
-				</a>Facebook <br>
+				</a> Facebook <br class = "br-contact">
 				<a class="btn btn-lg btn-social-icon btn-linkedin" href="https://www.linkedin.com/company/2709447?trk=prof-0-ovw-curr_pos" target = "_blank">
 					<span class="fa fa-linkedin"></span>
-				</a> Linkedin <br>
+				</a> Linkedin <br class = "br-contact">
 				<input id="contactEmail" type="hidden" name="email" value="consultingclub@cornell.edu">
 				<a class="btn btn-lg btn-social-icon btn-envelope"  target = "_blank">
 					<span class="fa fa-envelope" onclick="copyToClipboard('contactEmail')"></span>
