--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                         <div class = "table">
                            <ul class="nav navbar-nav">
                                <!-- <li class="active"><a href="#">Home</a></li> -->
-                               <li><a id = "about" class = "headerButton" href="#aboutSect">ABOUT</a></li>
-                               <li><a id = "news" class = "headerButton" href="#newsSect">NEWS</a></li> 
-                               <li><a id = "team" class = "headerButton" href="#teamSect">TEAM</a></li> 
-                               <li><a id = "apply" class = "headerButton" href="#applySect">APPLY</a></li> 
-                               <li><a id = "contact" class = "headerButton" href="#contactSect">CONTACT</a></li> 
+                               <li><a id = "about" class = "headerButton animate" href="#aboutSect">ABOUT</a></li>
+                               <li><a id = "news" class = "headerButton animate" href="#newsSect">NEWS</a></li> 
+                               <li><a id = "team" class = "headerButton animate" href="#teamSect">TEAM</a></li> 
+                               <li><a id = "apply" class = "headerButton animate" href="#applySect">APPLY</a></li> 
+                               <li><a id = "contact" class = "headerButton animate" href="#contactSect">CONTACT</a></li> 
                            </ul>
                         </div>
                     </div>
