--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col text-right">
           <br>
-          <span class = "animate"><a href = "#">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></span>
+          <span class = "animate"><a href = "http://cornellconsultingclub.com/ccc/about-us">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></span>
         </div>
       </div>
     </div>
@@ -170,7 +170,14 @@
             Currently, Nicole is a Managing Director and the VP of Corporate Relations at Cornell Consulting Club. She has led a variety of projects spanning the financial services, education, publishing, and software technology industries. As VP of Corporate Relations, she works to build relationships with top consulting firms by organizing case competitions, coffee chats, and private networking sessions for CCC members.
           </p>
         </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col">
+          <h4 class = "text-center"> Director of Recruitment - Kevin Chan </h4>
+          <img src="http://placehold.it/200x200">
+          <p class = "text-left">
+            Kevin is currently a senior in the College of Engineering at Cornell University studying Materials Science & Engineering with a minor in Business. In the past, he has worked at a major tech company, growing Silicon Valley start-up, and in management consulting. He will be joining Deloitte Consulting full-time in the next Fall. On campus, in addition to the Cornell Consulting Club, he is the Head Social of an active social fraternity on campus. In CCC, Kevin has experience working in a variety of industries including private equity, technology and media. As Director of Recruiting, he is leading efforts in organizing the recruitment efforts of nearly 150 applicants each semester.
+        </div>
         
+
         <!-- Commenting out the button until we receive content for the "Rest of Our Team"
         <div class="col-lg-4 col-md-6 col-sm-12 col">
                   <br class = "br-left">
