--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
-          <h4 class = "text-center"> VP of Internal Relation - Kristin Zak </h4>
+          <h4 class = "text-center"> VP of Internal Relations - Kristin Zak </h4>
           <img src="http://placehold.it/200x200">
           <p class = "text-left">
             Kristin is a junior Information Science major, minoring in Statistics and Business. Last summer she worked at the Mae Fah Luang Foundation in Bangkok building a sustainable distribution strategy for organic rice farmers in Northern Thailand. On campus, she is the Director of Marketing for Cayuga Crunch, a member of a social sorority, and a Food Marketing Fellow. Kristin has served Cornell Consulting Club as the Vice President of Internal Relations for the past year and is excited to continue this semester.
