--- a/index.html
+++ b/index.html
@@ -176,8 +176,6 @@
           <p class = "text-left">
             Kevin is currently a senior in the College of Engineering at Cornell University studying Materials Science & Engineering with a minor in Business. In the past, he has worked at a major tech company, growing Silicon Valley start-up, and in management consulting. He will be joining Deloitte Consulting full-time in the next Fall. On campus, in addition to the Cornell Consulting Club, he is the Head Social of an active social fraternity on campus. In CCC, Kevin has experience working in a variety of industries including private equity, technology and media. As Director of Recruiting, he is leading efforts in organizing the recruitment efforts of nearly 150 applicants each semester.
         </div>
-        
-
         <!-- Commenting out the button until we receive content for the "Rest of Our Team"
         <div class="col-lg-4 col-md-6 col-sm-12 col">
                   <br class = "br-left">
@@ -195,21 +193,21 @@
 <div id = "applySect" class = "sect sectC">
 <h1 class = "text-center">APPLY</h1>
 <p>
-  <span>Gain Consulting Experience</span>
+  <span><strong>Gain Consulting Experience</strong></span>
   <br>
   The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience. In today’s job market, the primary factors for success – besides an excellent education – are experience, personal networks and ability, all of which are refined and improved at CCC. Hands-on consulting workshops combined with (alumni/employer) networking sessions provide an ideal combination for the advancement of a member’s professional career, while the microcosm of excelling and working with like-minded students provides a nurturing and personal connection with consulting itself.<br>
   <br>
   <hr align="center">
 </p>
 <p>
-  <span>Expand Your Network</span>
+  <span><strong>Expand Your Network</strong></span>
   <br>
   The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
   <br>
   <hr>
 </p>
 <p>
-  <span>Educational Program</span>
+  <span><strong>Educational Program</strong></span>
   <br>
   The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
   <br>
