pictures in folder

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> President - Carlos Hernandez </h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Carlos.png">
           <p class = "text-left">
             Carlos is currently a senior in the College of Arts and Sciences studying Economics and French. In the past, he has worked at the Boston Consulting Group, Evercore Investment Bank, CEMEX, and Deloitte Consulting. On campus, he is the co-founder and President of the Cornell Investment Banking Club and an active participant in the Cornell Speech and Debate Society. In CCC, Carlos is the current president and a director. He manages several projects throughout the year and guides member development.
           </p>
@@ -163,7 +163,7 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
-          <h4 class = "text-center"> VP of Corporate Relations - Nicole </h4>
+          <h4 class = "text-center"> VP of Corporate Relations - Nicole Schmit</h4>
           <img src="http://placehold.it/200x200">
           <p class = "text-left">
             Nicole is a senior majoring in Economics and minoring in China & Asia-Pacific Studies, Business, Law & Society, and History. This past summer she was a summer analyst at Citi in the Investment Banking Division and will be returning there full-time. The summer prior, she interned with Deloitte Consulting in NYC. On campus, she is the Co-President of Cornell Investment Banking Club, Senior Vice President of Society for Women in Business, and Editor-in-Chief (emeritus) of Business Asia Journal.
@@ -195,21 +195,21 @@
 <p>
   <span><strong>Gain Consulting Experience</strong></span>
   <br>
-  The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience. In today’s job market, the primary factors for success – besides an excellent education – are experience, personal networks and ability, all of which are refined and improved at CCC. Hands-on consulting workshops combined with (alumni/employer) networking sessions provide an ideal combination for the advancement of a member’s professional career, while the microcosm of excelling and working with like-minded students provides a nurturing and personal connection with consulting itself.<br>
+  We go beyond just consulting education -- our members receive hands-on experience by providing real-world clients to work with. Whether it be project work for a Fortune 500 company, a boutique firm, or a startup, our club's business model allows for members to leverage their knowledge from Cornell and expand their professional career. If you've ever wanted to excel, this is the place to do so.<br>
   <br>
   <hr align="center">
 </p>
 <p>
   <span><strong>Expand Your Network</strong></span>
   <br>
-  The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
+  Our organization is the oldest consulting organization on campus. This means members have access to alumni spanning several industries and firms. Our alumni have landed in the top firms of professional services firms, meaning the best in the industry will come back to frequently assist and educate members. Additionally, our on campus network is just as valuable. The members of this club are leaders on campus, and the university faculty associated with this club are consultants with years of management consulting experience.<br>
   <br>
   <hr>
 </p>
 <p>
   <span><strong>Educational Program</strong></span>
   <br>
-  The Cornell Consulting Club not only provides an educational program for students who are interested and want to learn more, but also allows members to get hands-on experience by providing continuous challenges to further refine their sophisticated consulting skills through practical experience.<br>
+  Our executive board provides an extensive educational program for students interested in consulting. Our education series is open to the public, but membership means additional hands-on learning that can't be found elsewhere. Our training has been crafted by borrowing heavily from training programs of real firms, meaning participants will be prepared for the real industry by the time they graduate. <br>
   <br>
 </p>
 <div class="col-lg-12 col-md-12 text-center">
