Added images to site

--- a/index.html
+++ b/index.html
@@ -127,28 +127,28 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> President - Carlos Hernandez </h4>
-          <img src="images/Exec Carlos.png">
+          <img src="images/Exec Carlos.jpeg">
           <p class = "text-left">
             Carlos is currently a senior in the College of Arts and Sciences studying Economics and French. In the past, he has worked at the Boston Consulting Group, Evercore Investment Bank, CEMEX, and Deloitte Consulting. On campus, he is the co-founder and President of the Cornell Investment Banking Club and an active participant in the Cornell Speech and Debate Society. In CCC, Carlos is the current president and a director. He manages several projects throughout the year and guides member development.
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> VP of Internal Relations - Kristin Zak </h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Kristin.jpg">
           <p class = "text-left">
             Kristin is a junior Information Science major, minoring in Statistics and Business. Last summer she worked at the Mae Fah Luang Foundation in Bangkok building a sustainable distribution strategy for organic rice farmers in Northern Thailand. On campus, she is the Director of Marketing for Cayuga Crunch, a member of a social sorority, and a Food Marketing Fellow. Kristin has served Cornell Consulting Club as the Vice President of Internal Relations for the past year and is excited to continue this semester.
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> VP of Public Relations - Amanda Goldman </h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Amanda.jpg">
           <p class = "text-left">
             Amanda is a junior economics major from NYC. Besides CCC, Amanda is a sector analyst at the Mutual Investment Club of Cornell and a member of a social sorority. This past summer, Amanda worked with the macro research team at Zweig-DiMenna Associates, a long-short equity hedge fund. Amanda joined CCC the fall of her freshman year and is now VP of Public Relations. While in CCC, she has worked on a wide range of projects including strategy consulting, oil & gas investment banking, and a social media startup.
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> Executive VP - Erica Demond </h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Erica.jpg">
           <p class = "text-left">
             Erica Demond is a senior studying Economics and minoring in English from Washington. Last summer, she worked at the Boston Consulting Group as a summer associate and will be returning full-time. On campus, she is the co-president of Phi Beta Kappa, the nation's leading liberal arts honor society and is a co-president of the Cornell Running club.
             In CCC, Erica has worked on various projects ranging from microfinance, to social media, to industrial goods clients. As a Project Manager and Director, she has managed teams of over 10 analysts. As Executive Vice President, Erica is in charge of all New Member training to ensure that new members have the skills necessary for a fulfilling experience in CCC. She also runs the Education Series, a weekly presentation series that is open to all members of the Cornell community.
@@ -156,7 +156,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> VP of Operations - Charlie Liao </h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Charlie.jpg">
           <p class = "text-left">
             Charlie is a junior in Applied Economics and Management major with a minor in Art History. This past summer, he worked as a summer analyst in Deloitte Consulting LLP's Technology Strategy & Architecture service line. On campus, he is on the rush committee for Alpha Kappa Psi, a writer for the Cornell Daily Sun, an executive board member of the BreakFree Dance, and a member of the Cornell Undergraduate Asia Business Society.
             Currently, Charlie is a Project Manager and VP of Operations at Cornell Consulting Club. He's led and participated in several projects, spanning from print media to industrial manufacturing. As VP of Operations, Charlie ensures that the club functions smoothly: from setting timelines to completing club-furthering projects, he oversees most of the backend.
@@ -164,7 +164,7 @@
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 col">
           <h4 class = "text-center"> VP of Corporate Relations - Nicole Schmit</h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Nicole.jpg">
           <p class = "text-left">
             Nicole is a senior majoring in Economics and minoring in China & Asia-Pacific Studies, Business, Law & Society, and History. This past summer she was a summer analyst at Citi in the Investment Banking Division and will be returning there full-time. The summer prior, she interned with Deloitte Consulting in NYC. On campus, she is the Co-President of Cornell Investment Banking Club, Senior Vice President of Society for Women in Business, and Editor-in-Chief (emeritus) of Business Asia Journal.
             Currently, Nicole is a Managing Director and the VP of Corporate Relations at Cornell Consulting Club. She has led a variety of projects spanning the financial services, education, publishing, and software technology industries. As VP of Corporate Relations, she works to build relationships with top consulting firms by organizing case competitions, coffee chats, and private networking sessions for CCC members.
@@ -172,7 +172,7 @@
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col">
           <h4 class = "text-center"> Director of Recruitment - Kevin Chan </h4>
-          <img src="http://placehold.it/200x200">
+          <img src="images/Exec Kevin.jpg">
           <p class = "text-left">
             Kevin is currently a senior in the College of Engineering at Cornell University studying Materials Science & Engineering with a minor in Business. In the past, he has worked at a major tech company, growing Silicon Valley start-up, and in management consulting. He will be joining Deloitte Consulting full-time in the next Fall. On campus, in addition to the Cornell Consulting Club, he is the Head Social of an active social fraternity on campus. In CCC, Kevin has experience working in a variety of industries including private equity, technology and media. As Director of Recruiting, he is leading efforts in organizing the recruitment efforts of nearly 150 applicants each semester.
         </div>
