Replaced dead links

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col text-right">
           <br>
-          <span class = "animate"><a href = "http://cornellconsultingclub.com/ccc/about-us">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></span>
+          <span class = "animate"><a href = "http://cornellconsultingclub.com/ccc/about-us" target = "_blank">Learn More <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></span>
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
       <!--Wrapper for Slides-->
       <div class = "carousel-inner">
         <div class = "item active">
-          <a href= "#"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/Cornerstone%20Case%20Competition.png"></a>
+          <a href= "https://docs.google.com/forms/d/1qJwVzm5mgNNoVNnzB3CvxawlhofRYEF7qo1V4QaNAuY/closedform" target = "_new"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/Cornerstone%20Case%20Competition.png"></a>
           <div class = "container-fluid">
             <div class = "carousel-caption">
               <h1>Cornerstone Research 2015 Case Competition</h1>
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class = "item">
-          <a href= "#"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/projects.jpg"></a>
+          <a href= "http://cornellconsultingclub.com/ccc/services/service-offerings" target = "_new"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/projects.jpg"></a>
           <div class = "container-fluid">
             <div class = "carousel-caption">
               <h1>Service Offerings</h1>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class = "item">
-          <a href= "#"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/bcg.jpg"></a>
+          <a href= "http://cornellconsultingclub.com/ccc/contact/alumni-relations" target = "_new"><img class = "img-responsive" src = "http://cornellconsultingclub.com/ccc/images/bcg.jpg"></a>
           <div class = "container-fluid">
             <div class = "carousel-caption">
               <h1>Office Visits</h1>
